feature (body.scss index.html) добавил новый блок "профессии"

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -137,7 +137,44 @@
             </div>
             <div class="future-professions">
                 <div class="container">
-
+                    <div class="future-professions__row">
+                        <div class="future-professions__info">
+                            <h2 class="future-professions__title">Каких специалистов готовит кафедра РК6</h2>
+                            <div class="future-professions__subtitle">Главная особенность <br> образовательных программ кафедры РК6 - ориентация на подготовку бакалавров и магистров в области информационных технологий в сочетании с прикладными знаниями</div>
+                        </div>
+                        <div class="future-professions__profession-card-row">
+                            <div class="future-professions__profession-card profession-card">
+                                <div class="profession-card__img">
+                                    <img src="img/body/profession-card/engineer.jpg" alt="engineer">
+                                </div>
+                                <div class="profession-card__profession">Инженер</div>
+                            </div>
+                            <div class="future-professions__profession-card profession-card">
+                                <div class="profession-card__img">
+                                    <img src="img/body/profession-card/3d.jpeg" alt="3d">
+                                </div>
+                                <div class="profession-card__profession">3D-моделирование</div>
+                            </div>
+                            <div class="future-professions__profession-card profession-card">
+                                <div class="profession-card__img">
+                                    <img src="img/body/profession-card/bd.png" alt="bd">
+                                </div>
+                                <div class="profession-card__profession">Аналитик баз данных</div>
+                            </div>
+                            <div class="future-professions__profession-card profession-card">
+                                <div class="profession-card__img">
+                                    <img src="img/body/profession-card/cad.jpg" alt="cad">
+                                </div>
+                                <div class="profession-card__profession">Специалист САПР</div>
+                            </div>
+                            <div class="future-professions__profession-card profession-card">
+                                <div class="profession-card__img">
+                                    <img src="img/body/profession-card/c++.jpg" alt="c++">
+                                </div>
+                                <div class="profession-card__profession">Программист C/C++</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
