fix (header.scss body.scss index.html) исправил шрифты + мелкие исправления с карточками преподавателей

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -102,7 +102,7 @@
                             </div>
                             <div class="teacher-card__info teacher-card__colour-1">
                                 <div class="teacher-card__full-name">Берчун <br>Юрий Валерьевич</div>
-                                <div class="teacher-card__achievements">Старший преподаватель. Заместитель декана факультета РК</div>
+                                <div class="teacher-card__achievements">Старший преподаватель. <br>Заместитель декана факультета РК</div>
                             </div>
                         </div>
                         <div class="teachers__teacher-card teacher-card">
@@ -111,7 +111,7 @@
                             </div>
                             <div class="teacher-card__info teacher-card__colour-2">
                                 <div class="teacher-card__full-name">Волосатова <br>Тамара Михайловна</div>
-                                <div class="teacher-card__achievements">Доцент. Заместитель заведующего кафедрой</div>
+                                <div class="teacher-card__achievements">Доцент. <br>Заместитель заведующего кафедрой</div>
                             </div>
                         </div>
                         <div class="teachers__teacher-card teacher-card">
@@ -120,7 +120,7 @@
                             </div>
                             <div class="teacher-card__info teacher-card__colour-3">
                                 <div class="teacher-card__full-name">Маничев <br>Владимир Борисович</div>
-                                <div class="teacher-card__achievements">Доцент. Заместитель заведующего кафедрой</div>
+                                <div class="teacher-card__achievements">Доцент. <br>Заместитель заведующего кафедрой</div>
                             </div>
                         </div>
                         <div class="teachers__teacher-card teacher-card">
@@ -129,7 +129,7 @@
                             </div>
                             <div class="teacher-card__info teacher-card__colour-4">
                                 <div class="teacher-card__full-name">Белоножко <br>Павел Петрович</div>
-                                <div class="teacher-card__achievements">Доцент. Кандидат технических наук</div>
+                                <div class="teacher-card__achievements">Доцент. <br>Кандидат технических наук</div>
                             </div>
                         </div>
                     </div>
