feature (body.scss index.html) добавил блок "партнеры" + мелкие исправления
Мелкие исправления: в некоторых местах увеличил межстрочный отступ,
уменьшил прозрачность текста в блоке "специальности"

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -177,6 +177,60 @@
                     </div>
                 </div>
             </div>
+            <div class="partners">
+                <div class="container">
+                    <div class="partners__title title">
+                        <div class="title__img">
+                            <img src="img/body/title/img-title_2.png" alt="title-partners">
+                        </div>
+                        <h3 class="title__text">Наши партнеры</h3>
+                    </div>
+                    <div class="partners__col">
+                        <div class="partners__company company">
+                            <div class="company__img">
+                                <img src="img/body/company/bentley.jpg" alt="bentley">
+                            </div>
+                            <div class="company__text">Компания BentleyBentley Systems - это компания-разработчик программного обеспечения для профессионалов в сфере строительства и управление мировой инфраструктурой, включая автомобильные дороги, мосты, аэропорты, небоскребы, заводы и электростанции, а также сети.</div>
+                        </div>
+                        <div class="partners__company company">
+                            <div class="company__img">
+                                <img src="img/body/company/siemens.png" alt="siemens">
+                            </div>
+                            <div class="company__text">Департамент «Корпоративные Технологии» компании Siemens AG занимается научно-исследовательской деятельностью в различных технологических областях, в том числе автоматизацией жизненного цикла изделий в целом и на всех его этапах</div>
+                        </div>
+                        <div class="partners__company company">
+                            <div class="company__img">
+                                <img src="img/body/company/salut.jpg" alt="salut">
+                            </div>
+                            <div class="company__text"> АО «НПЦ газотурбостроения «САЛЮТ» первое и крупнейшее в России предприятие по разработке и производству газотурбинных двигателей.</div>
+                        </div>
+                        <div class="partners__company company">
+                            <div class="company__img">
+                                <img src="img/body/company/dorodnitsyn-vych-centr.jpg" alt="dorodnitsyn-vych-centr">
+                            </div>
+                            <div class="company__text">Вычислительный центр РАН, основанный в 1955 году академиком А.А.Дородницыным, является ведущим научно-исследовательским институтом Российской академии наук в области вычислительных методов, математического моделирования, математического и программного обеспечения ЭВМ</div>
+                        </div>
+                        <div class="partners__company company">
+                            <div class="company__img">
+                                <img src="img/body/company/gokhran.jpeg" alt="gokhran">
+                            </div>
+                            <div class="company__text">Федеральное казенное учреждение "Государственное учреждение по формированию Государственного фонда драгоценных металлов и драгоценных камней Российской Федерации, хранению, отпуску и использованию драгоценных металлов и драгоценных камней</div>
+                        </div>
+                        <div class="partners__company company">
+                            <div class="company__img">
+                                <img src="img/body/company/irkut.jpg" alt="irkut">
+                            </div>
+                            <div class="company__text">Корпорация «Иркут» занимает лидирующие позиции среди российских авиастроительных предприятий. Деятельность корпорации направлена на проектирование, производство, реализацию и послепродажное обслуживание авиационной техники военного и гражданского назначения.</div>
+                        </div>
+                        <div class="partners__company company">
+                            <div class="company__img">
+                                <img src="img/body/company/lanit.jpg" alt="lanit">
+                            </div>
+                            <div class="company__text">ЛАНИТ (Лаборатория Новых Информационных Технологий) - крупнейший российский системным интегратор и партнер более двухсот основных мировых производителей оборудования и программных решений в области высоких технологий.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </body>
