feature (header.scss burger-menu.js index.html) добавил бургер меню
Бургер меню появляется при ширине экрана <600 px

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -20,12 +20,15 @@
                         <div class="menu__department">РК6</div>
                         <div class="menu__speciality">САПР</div>
                     </div>
-                    <nav class="menu__nav">
+                    <nav class="menu__body">
                         <ul class="menu__list">
                             <li><a href="" class="menu__link">Абитуриентам</a></li>
                             <li><a href="" class="menu__link">Студентам</a></li>
                         </ul>
                     </nav>
+                    <div class="menu__burger">
+                        <span></span>
+                    </div>
                 </div>
                 <div class="header__main">
                     <div class="header__information">
@@ -36,7 +39,6 @@
                     </div>
                     <div class="header__cards"></div>
                 </div>
-
             </div>
         </section>
         <section class="body">
@@ -278,5 +280,6 @@
             </div>
         </section>
     </div>
+    <script src="js/burger-menu.js"></script>
 </body>
 </html>
