feature (for-applicants/header.scss) добавлен блок "специальность" в body

--- a/for_applicants/for-applicants.html
+++ b/for_applicants/for-applicants.html
@@ -56,6 +56,20 @@
         </div>
       </div>
     </section>
+    <section class="body">
+      <div class="training-profile">
+        <div class="container">
+          <div class="training-profile__title">
+            <div class="training-profile__img">
+              <img src="img/body/training-profile/book-icon.png" alt="book-icon">
+            </div>
+            <h2 class="training-profile__text">Профиль подготовки бакалавров:</h2>
+          </div>
+          <div class="training-profile__profile">09.03.01_01 - Системы автоматизированного проектирования</div>
+          <div class="training-profile__description">Главная особенность образовательных программ кафедры РК6 (в отличие от программ других кафедр направления «Информатика и вычислительная техника») – ориентация на подготовку бакалавров и магистров в области информационных технологий в сочетании с прикладными знаниями, прежде всего, в областях машиностроения. Это обеспечивает востребованность выпускников кафедры различными производственными и научно-исследовательскими, государственными и частными предприятиями и организациями. Выпускники кафедры работают на заводах, в НИИ, КБ, банках, государственных и муниципальных организациях и т.п., выполняя проектную работу, занимаясь информатизацией предприятий, внедрением в практику проектирования новейших методов и средств разработки изделий и др.</div>
+        </div>
+      </div>
+    </section>
   </div>
   <script src="js/burger-menu.js"></script>
 </body>
