feature (for-applicants/body.scss) добавлен блок "правила приема" в body

--- a/for_applicants/for-applicants.html
+++ b/for_applicants/for-applicants.html
@@ -69,6 +69,24 @@
           <div class="training-profile__description">Главная особенность образовательных программ кафедры РК6 (в отличие от программ других кафедр направления «Информатика и вычислительная техника») – ориентация на подготовку бакалавров и магистров в области информационных технологий в сочетании с прикладными знаниями, прежде всего, в областях машиностроения. Это обеспечивает востребованность выпускников кафедры различными производственными и научно-исследовательскими, государственными и частными предприятиями и организациями. Выпускники кафедры работают на заводах, в НИИ, КБ, банках, государственных и муниципальных организациях и т.п., выполняя проектную работу, занимаясь информатизацией предприятий, внедрением в практику проектирования новейших методов и средств разработки изделий и др.</div>
         </div>
       </div>
+      <div class="admission-rules">
+        <div class="admission-rules__blackout"></div>
+        <div class="container">
+          <div class="admission-rules__title">Правила приема</div>
+          <div class="admission-rules__row">
+            <div class="admission-rules__button admission-rules__colour-1">
+              <a href=""><span>Русский язык</span></a>
+            </div>
+            <div class="admission-rules__button admission-rules__colour-2">
+              <a href=""><span>Математика</span></a>
+            </div>
+            <div class="admission-rules__button admission-rules__colour-3">
+              <a href=""><span>Информатика</span></a>
+            </div>
+          </div>
+          <div class="admission-rules__text">Вы сдали указанные выше предметы? <br>Значит вы готовы учиться на нашей кафедре!</div>
+        </div>
+      </div>
     </section>
   </div>
   <script src="js/burger-menu.js"></script>
