feature (for-applicants/body.scss) добавлен блок "проходные баллы" в body

--- a/for_applicants/for-applicants.html
+++ b/for_applicants/for-applicants.html
@@ -87,8 +87,24 @@
           <div class="admission-rules__text">Вы сдали указанные выше предметы? <br>Значит вы готовы учиться на нашей кафедре!</div>
         </div>
       </div>
+      <div class="passing-scores">
+        <div class="container">
+          <div class="passing-scores__title">
+            <div class="passing-scores__img">
+              <img src="img/body/passing-scores/uni-icon.png" alt="uni">
+            </div>
+            <h2 class="passing-scores__text">Проходные баллы прошлых лет</h2>
+          </div>
+          <div class="passing-scores__years">2012-2021</div>
+          <div class="passing-scores__schedule">
+            <canvas id="passing-scores"></canvas>
+          </div>
+        </div>
+      </div>
     </section>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.js"></script>
   <script src="js/burger-menu.js"></script>
+  <script src="js/schedule.js"></script>
 </body>
 </html>
