feature (for-applicants/body.scss for-applicants/footer.scss) полностью сделана 2 страница
2 страница "для абитуриентов" полностью сделана
добавлен переход между главной страницей и страницей "для абитуриентов"

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <nav class="menu__body">
                         <ul class="menu__list">
-                            <li><a href="" class="menu__link">Абитуриентам</a></li>
+                            <li><a href="../for_applicants/for-applicants.html" class="menu__link">Абитуриентам</a></li>
                             <li><a href="" class="menu__link">Студентам</a></li>
                         </ul>
                     </nav>
@@ -55,7 +55,7 @@
                                 проходных баллах, а также о том, где и как
                                 работают выпускники кафедры.</div>
                             <div class="info-card__button">
-                                <a href=""><span>Подробнее</span></a>
+                                <a href="../for_applicants/for-applicants.html"><span>Подробнее</span></a>
                             </div>
                         </div>
                         <div class="students-and-applicants__info-card info-card">
