--- a/for_applicants/for-applicants.html
+++ b/for_applicants/for-applicants.html
@@ -22,7 +22,7 @@
           </div>
           <nav class="menu__body">
             <ul class="menu__list">
-              <li><a href="" class="menu__link">Главная</a></li>
+              <li><a href="../main_page/index.html" class="menu__link">Главная</a></li>
               <li><a href="" class="menu__link">Студентам</a></li>
             </ul>
           </nav>
@@ -100,6 +100,79 @@
             <canvas id="passing-scores"></canvas>
           </div>
         </div>
+      </div>
+      <div class="graduates">
+        <div class="container">
+          <h2 class="graduates__title">Наши выпускники</h2>
+          <div class="graduates__row">
+            <div class="graduates__graduate-card graduate-card">
+              <div class="graduate-card__photo">
+                <img src="img/body/graduate-card/Dmitry_Sklyarov.jpg" alt="Sklyarov">
+              </div>
+              <div class="graduate-card__full-name">Дмитрий Скляров</div>
+              <div class="graduate-card__progress">В 1991 году поступил и в 1997 году закончил кафедру РК6. Российский программист, разработчик алгоритма программы Advanced eBook Processor, выпущенной московской фирмой «Элкомсофт» и предназначенной для обхода защиты электронных книг в формате Adobe PDF. В настоящий момент - доцент кафедры «Информационная безопасность» факультета «Информатика и системы управления» МГТУ им. Баумана</div>
+            </div>
+            <div class="graduates__graduate-card graduate-card">
+              <div class="graduate-card__photo">
+                <img src="img/body/graduate-card/Dmitry_Grishin.jpeg" alt="Grishin">
+              </div>
+              <div class="graduate-card__full-name">Дмитрий Гришин</div>
+              <div class="graduate-card__progress">В 1993 году поступил и в 1999 году закончил с красным дипломом кафедру РК6. Еще в 1998 г. начал работать в компании—производителе программного обеспечения Axiom Int инженером-разработчиком, затем старшим разработчиком, IT-консультантом. В марте 2000 г. перешел в компанию netBridge (в дальнейшем — Mail.Ru), возглавил отдел разработки проекта интернет-аукциона Molotok.ru. В мае 2001 г. назначен руководителем сервис-центра Mail.Ru, в декабре — техническим директором Mail.Ru. В настоящий момент Дмитрий Гришин является главным исполнительным директором и главой совета директоров Mail.ru Group, основателем инвестиционного фонда Grishin Robotics.</div>
+            </div>
+            <div class="graduates__graduate-card graduate-card">
+              <div class="graduate-card__photo">
+                <img src="img/body/graduate-card/Anton_Komolov.jpg" alt="Komolov">
+              </div>
+              <div class="graduate-card__full-name">Антон Комолов</div>
+              <div class="graduate-card__progress">В 1993 году поступил и в 1999 году закончил кафедру РК6. Во время учёбы в университете Антон стал участником команды КВН МГТУ им. Баумана. В настоящее время Антон – известный российский радио- и телеведущий развлекательных программ, диджей, актёр дубляжа, шоумен.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="container">
+        <div class="footer__row">
+          <div class="footer__info">
+            <div class="footer__title">Контакты</div>
+            <div class="footer__img-and-text img-and-text">
+              <div class="img-and-text__img">
+                <a href="">
+                  <img src="img/footer/img-and-text/home-icon.png" alt="home-icon">
+                </a>
+              </div>
+              <div class="img-and-text__text">Москва, 2-я Бауманская ул., д. 5</div>
+            </div>
+            <div class="footer__img-and-text img-and-text">
+              <div class="img-and-text__img">
+                <a href="">
+                  <img src="img/footer/img-and-text/phone-icon.png" alt="phone-icon">
+                </a>
+              </div>
+              <div class="img-and-text__text">+7 (499) 263 6840</div>
+            </div>
+            <div class="footer__img-and-text img-and-text">
+              <div class="img-and-text__img">
+                <a href="">
+                  <img src="img/footer/img-and-text/mail-icon.png" alt="mail-icon">
+                </a>
+              </div>
+              <div class="img-and-text__text">rk6@bmstu.ru</div>
+            </div>
+            <div class="footer__img-and-text img-and-text">
+              <div class="img-and-text__img">
+                <a href="">
+                  <img src="img/footer/img-and-text/vk-icon2.png" alt="vk-icon">
+                </a>
+              </div>
+              <div class="img-and-text__text">Мы ВКонтакте</div>
+            </div>
+          </div>
+          <div class="footer__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.5689459098!2d37.68282171604668!3d55.765989898442164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54aae7db2a075%3A0xfa5b51a346478c0e!2z0JzQk9Ci0KMg0LjQvC4g0J0u0K0uINCR0LDRg9C80LDQvdCw!5e0!3m2!1sru!2sru!4v1656705732247!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+        <div class="footer__copyright">© 2022 Кафедра РК-6</div>
       </div>
     </section>
   </div>
