--- a/for_students/for-students.html
+++ b/for_students/for-students.html
@@ -32,6 +32,9 @@
                 </div>
             </div>
         </section>
+        <section class="body">
+
+        </section>
     </div>
     <script src="js/burger-menu.js"></script>
 </body>
