feature (for-students/body.scss) добавлен блок "студентам" и адоптирован

--- a/for_students/for-students.html
+++ b/for_students/for-students.html
@@ -33,7 +33,66 @@
             </div>
         </section>
         <section class="body">
-
+            <div class="information">
+                <div class="container">
+                    <div class="information__title">
+                        <div class="information__img">
+                            <img src="img/body/information/hat-icon.png" alt="hat-icon">
+                        </div>
+                        <h1 class="information__text">Студентам</h1>
+                    </div>
+                    <div class="information__row">
+                        <div class="information__info-card info-card">
+                            <div class="info-card__img">
+                                <img src="img/body/info-card/schedule_1.jpeg" alt="schedule_1">
+                            </div>
+                            <div class="info-card__text info-card__colour1">
+                                <a href="">Расписание занятий</a>
+                            </div>
+                        </div>
+                        <div class="information__info-card info-card">
+                            <div class="info-card__img">
+                                <img src="img/body/info-card/schedule_2.jpg" alt="schedule_2">
+                            </div>
+                            <div class="info-card__text info-card__colour2">
+                                <a href="">Расписание экзаменов</a>
+                            </div>
+                        </div>
+                        <div class="information__info-card info-card">
+                            <div class="info-card__img">
+                                <img src="img/body/info-card/schedule_3.jpg" alt="schedule_3">
+                            </div>
+                            <div class="info-card__text info-card__colour3">
+                                <a href="">Расписание лабораторных</a>
+                            </div>
+                        </div>
+                        <div class="information__info-card info-card">
+                            <div class="info-card__img">
+                                <img src="img/body/info-card/practic.jpeg" alt="practic">
+                            </div>
+                            <div class="info-card__text info-card__colour1">
+                                <a href="">Практика</a>
+                            </div>
+                        </div>
+                        <div class="information__info-card info-card">
+                            <div class="info-card__img">
+                                <img src="img/body/info-card/account.jpg" alt="account">
+                            </div>
+                            <div class="info-card__text info-card__colour2">
+                                <a href="">Личный кабинет</a>
+                            </div>
+                        </div>
+                        <div class="information__info-card info-card">
+                            <div class="info-card__img">
+                                <img src="img/body/info-card/cloud.jpg" alt="cloud">
+                            </div>
+                            <div class="info-card__text info-card__colour3">
+                                <a href="">Проходные баллы</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
     <script src="js/burger-menu.js"></script>
