feature (for-students/footer.scss) добавлен footer и адаптирован
связаны 3 страницы через меню

--- a/for_students/for-students.html
+++ b/for_students/for-students.html
@@ -22,8 +22,8 @@
                     </div>
                     <nav class="menu__body">
                         <ul class="menu__list">
+                            <li><a href="../for_applicants/for-applicants.html" class="menu__link">Абитуриентам</a></li>
                             <li><a href="../main_page/index.html" class="menu__link">Главная</a></li>
-                            <li><a href="" class="menu__link">Студентам</a></li>
                         </ul>
                     </nav>
                     <div class="menu__burger">
@@ -92,6 +92,51 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="footer">
+            <div class="container">
+                <div class="footer__row">
+                    <div class="footer__info">
+                        <div class="footer__title">Контакты</div>
+                        <div class="footer__img-and-text img-and-text">
+                            <div class="img-and-text__img">
+                                <a href="">
+                                    <img src="img/footer/img-and-text/home-icon.png" alt="home-icon">
+                                </a>
+                            </div>
+                            <div class="img-and-text__text">Москва, 2-я Бауманская ул., д. 5</div>
+                        </div>
+                        <div class="footer__img-and-text img-and-text">
+                            <div class="img-and-text__img">
+                                <a href="">
+                                    <img src="img/footer/img-and-text/phone-icon.png" alt="phone-icon">
+                                </a>
+                            </div>
+                            <div class="img-and-text__text">+7 (499) 263 6840</div>
+                        </div>
+                        <div class="footer__img-and-text img-and-text">
+                            <div class="img-and-text__img">
+                                <a href="">
+                                    <img src="img/footer/img-and-text/mail-icon.png" alt="mail-icon">
+                                </a>
+                            </div>
+                            <div class="img-and-text__text">rk6@bmstu.ru</div>
+                        </div>
+                        <div class="footer__img-and-text img-and-text">
+                            <div class="img-and-text__img">
+                                <a href="">
+                                    <img src="img/footer/img-and-text/vk-icon2.png" alt="vk-icon">
+                                </a>
+                            </div>
+                            <div class="img-and-text__text">Мы ВКонтакте</div>
+                        </div>
+                    </div>
+                    <div class="footer__map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.5689459098!2d37.68282171604668!3d55.765989898442164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54aae7db2a075%3A0xfa5b51a346478c0e!2z0JzQk9Ci0KMg0LjQvC4g0J0u0K0uINCR0LDRg9C80LDQvdCw!5e0!3m2!1sru!2sru!4v1656705732247!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="footer__copyright">© 2022 Кафедра РК-6</div>
             </div>
         </section>
     </div>
