--- a/main_page/index.html
+++ b/main_page/index.html
@@ -23,7 +23,7 @@
                     <nav class="menu__body">
                         <ul class="menu__list">
                             <li><a href="../for_applicants/for-applicants.html" class="menu__link">Абитуриентам</a></li>
-                            <li><a href="" class="menu__link">Студентам</a></li>
+                            <li><a href="../for_students/for-students.html" class="menu__link">Студентам</a></li>
                         </ul>
                     </nav>
                     <div class="menu__burger">
