fix (index.html) индексный файл вынесен в корневую папку

--- a/for_students/for-students.html
+++ b/for_students/for-students.html
@@ -23,7 +23,7 @@
                     <nav class="menu__body">
                         <ul class="menu__list">
                             <li><a href="../for_applicants/for-applicants.html" class="menu__link">Абитуриентам</a></li>
-                            <li><a href="../main_page/index.html" class="menu__link">Главная</a></li>
+                            <li><a href="../index.html" class="menu__link">Главная</a></li>
                         </ul>
                     </nav>
                     <div class="menu__burger">
