--- a/for_applicants/for-applicants.html
+++ b/for_applicants/for-applicants.html
@@ -22,7 +22,7 @@
           </div>
           <nav class="menu__body">
             <ul class="menu__list">
-              <li><a href="../main_page/index.html" class="menu__link">Главная</a></li>
+              <li><a href="../index.html" class="menu__link">Главная</a></li>
               <li><a href="../for_students/for-students.html" class="menu__link">Студентам</a></li>
             </ul>
           </nav>
