--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="main_page/css/style.css" />
     <title>Main Page</title>
 </head>
 <body>
@@ -16,15 +16,15 @@
                 <div class="header__menu menu">
                     <div class="menu__logo">
                         <div class="menu__img">
-                            <img src="img/header/logo/logo_x2.png" alt="logo">
+                            <img src="main_page/img/header/logo/logo_x2.png" alt="logo">
                         </div>
                         <div class="menu__department">РК6</div>
                         <div class="menu__speciality">САПР</div>
                     </div>
                     <nav class="menu__body">
                         <ul class="menu__list">
-                            <li><a href="../for_applicants/for-applicants.html" class="menu__link">Абитуриентам</a></li>
-                            <li><a href="../for_students/for-students.html" class="menu__link">Студентам</a></li>
+                            <li><a href="for_applicants/for-applicants.html" class="menu__link">Абитуриентам</a></li>
+                            <li><a href="for_students/for-students.html" class="menu__link">Студентам</a></li>
                         </ul>
                     </nav>
                     <div class="menu__burger">
@@ -91,7 +91,7 @@
                     <div class="students-and-applicants__row">
                         <div class="students-and-applicants__info-card info-card">
                             <div class="info-card__logo">
-                                <img src="img/body/students-and-applicants/people-logo_x2.png" alt="people-logo">
+                                <img src="main_page/img/body/students-and-applicants/people-logo_x2.png" alt="people-logo">
                             </div>
                             <h3 class="info-card__title">Для абитуриентов</h3>
                             <div class="info-card__info">В этом разделе вы найдете актуальную
@@ -99,12 +99,12 @@
                                 проходных баллах, а также о том, где и как
                                 работают выпускники кафедры.</div>
                             <div class="info-card__button">
-                                <a href="../for_applicants/for-applicants.html"><span>Подробнее</span></a>
+                                <a href="for_applicants/for-applicants.html"><span>Подробнее</span></a>
                             </div>
                         </div>
                         <div class="students-and-applicants__info-card info-card">
                             <div class="info-card__logo">
-                                <img src="img/body/students-and-applicants/student-logo_x2.png" alt="student-logo">
+                                <img src="main_page/img/body/students-and-applicants/student-logo_x2.png" alt="student-logo">
                             </div>
                             <h3 class="info-card__title">Для студентов</h3>
                             <div class="info-card__info">В этом разделе вы найдете актуальное
@@ -128,7 +128,7 @@
                             <li>Кафедра САПР МГТУ им. Н.Э. Баумана признается одной из ведущих кафедр САПР в России. Так, председателем Учебно-методической комиссии по специальности САПР Министерства образования РФ является проф. И.П. Норенков, а ученым секретарем совета - доцент Мартынюк В.А.</li>
                         </ul>
                         <div class="about-department__img">
-                            <img src="img/body/about-department/computer_x3.jpg" alt="">
+                            <img src="main_page/img/body/about-department/computer_x3.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -137,14 +137,14 @@
                 <div class="container">
                     <div class="teachers__title title">
                         <div class="title__img">
-                            <img src="img/body/title/img-title_1.png" alt="title-hat">
+                            <img src="main_page/img/body/title/img-title_1.png" alt="title-hat">
                         </div>
                         <h3 class="title__text">Преподаватели</h3>
                     </div>
                     <div class="teachers__row">
                         <div class="teachers__teacher-card teacher-card">
                             <div class="teacher-card__photo">
-                                <img src="img/body/teacher-card/berchun.jpg" alt="Berchun">
+                                <img src="main_page/img/body/teacher-card/berchun.jpg" alt="Berchun">
                             </div>
                             <div class="teacher-card__info teacher-card__colour-1">
                                 <div class="teacher-card__full-name">Берчун <br>Юрий Валерьевич</div>
@@ -153,7 +153,7 @@
                         </div>
                         <div class="teachers__teacher-card teacher-card">
                             <div class="teacher-card__photo">
-                                <img src="img/body/teacher-card/volosatova.jpg" alt="Volosatova">
+                                <img src="main_page/img/body/teacher-card/volosatova.jpg" alt="Volosatova">
                             </div>
                             <div class="teacher-card__info teacher-card__colour-2">
                                 <div class="teacher-card__full-name">Волосатова <br>Тамара Михайловна</div>
@@ -162,7 +162,7 @@
                         </div>
                         <div class="teachers__teacher-card teacher-card">
                             <div class="teacher-card__photo">
-                                <img src="img/body/teacher-card/manichev.jpg" alt="Manichev">
+                                <img src="main_page/img/body/teacher-card/manichev.jpg" alt="Manichev">
                             </div>
                             <div class="teacher-card__info teacher-card__colour-3">
                                 <div class="teacher-card__full-name">Маничев <br>Владимир Борисович</div>
@@ -171,7 +171,7 @@
                         </div>
                         <div class="teachers__teacher-card teacher-card">
                             <div class="teacher-card__photo">
-                                <img src="img/body/teacher-card/belonozhko.png" alt="">
+                                <img src="main_page/img/body/teacher-card/belonozhko.png" alt="">
                             </div>
                             <div class="teacher-card__info teacher-card__colour-4">
                                 <div class="teacher-card__full-name">Белоножко <br>Павел Петрович</div>
@@ -191,31 +191,31 @@
                         <div class="future-professions__profession-card-row">
                             <div class="future-professions__profession-card profession-card">
                                 <div class="profession-card__img">
-                                    <img src="img/body/profession-card/engineer.jpg" alt="engineer">
+                                    <img src="main_page/img/body/profession-card/engineer.jpg" alt="engineer">
                                 </div>
                                 <div class="profession-card__profession">Инженер</div>
                             </div>
                             <div class="future-professions__profession-card profession-card">
                                 <div class="profession-card__img">
-                                    <img src="img/body/profession-card/3d.jpeg" alt="3d">
+                                    <img src="main_page/img/body/profession-card/3d.jpeg" alt="3d">
                                 </div>
                                 <div class="profession-card__profession">3D-моделирование</div>
                             </div>
                             <div class="future-professions__profession-card profession-card">
                                 <div class="profession-card__img">
-                                    <img src="img/body/profession-card/bd.png" alt="bd">
+                                    <img src="main_page/img/body/profession-card/bd.png" alt="bd">
                                 </div>
                                 <div class="profession-card__profession">Аналитик баз данных</div>
                             </div>
                             <div class="future-professions__profession-card profession-card">
                                 <div class="profession-card__img">
-                                    <img src="img/body/profession-card/cad.jpg" alt="cad">
+                                    <img src="main_page/img/body/profession-card/cad.jpg" alt="cad">
                                 </div>
                                 <div class="profession-card__profession">Специалист САПР</div>
                             </div>
                             <div class="future-professions__profession-card profession-card">
                                 <div class="profession-card__img">
-                                    <img src="img/body/profession-card/c++.jpg" alt="c++">
+                                    <img src="main_page/img/body/profession-card/c++.jpg" alt="c++">
                                 </div>
                                 <div class="profession-card__profession">Программист C/C++</div>
                             </div>
@@ -227,50 +227,50 @@
                 <div class="container">
                     <div class="partners__title title">
                         <div class="title__img">
-                            <img src="img/body/title/img-title_2.png" alt="title-partners">
+                            <img src="main_page/img/body/title/img-title_2.png" alt="title-partners">
                         </div>
                         <h3 class="title__text">Наши партнеры</h3>
                     </div>
                     <div class="partners__col">
                         <div class="partners__company company">
                             <div class="company__img">
-                                <img src="img/body/company/bentley.jpg" alt="bentley">
+                                <img src="main_page/img/body/company/bentley.jpg" alt="bentley">
                             </div>
                             <div class="company__text">Компания BentleyBentley Systems - это компания-разработчик программного обеспечения для профессионалов в сфере строительства и управление мировой инфраструктурой, включая автомобильные дороги, мосты, аэропорты, небоскребы, заводы и электростанции, а также сети.</div>
                         </div>
                         <div class="partners__company company">
                             <div class="company__img">
-                                <img src="img/body/company/siemens.png" alt="siemens">
+                                <img src="main_page/img/body/company/siemens.png" alt="siemens">
                             </div>
                             <div class="company__text">Департамент «Корпоративные Технологии» компании Siemens AG занимается научно-исследовательской деятельностью в различных технологических областях, в том числе автоматизацией жизненного цикла изделий в целом и на всех его этапах</div>
                         </div>
                         <div class="partners__company company">
                             <div class="company__img">
-                                <img src="img/body/company/salut.jpg" alt="salut">
+                                <img src="main_page/img/body/company/salut.jpg" alt="salut">
                             </div>
                             <div class="company__text"> АО «НПЦ газотурбостроения «САЛЮТ» первое и крупнейшее в России предприятие по разработке и производству газотурбинных двигателей.</div>
                         </div>
                         <div class="partners__company company">
                             <div class="company__img">
-                                <img src="img/body/company/dorodnitsyn-vych-centr.jpg" alt="dorodnitsyn-vych-centr">
+                                <img src="main_page/img/body/company/dorodnitsyn-vych-centr.jpg" alt="dorodnitsyn-vych-centr">
                             </div>
                             <div class="company__text">Вычислительный центр РАН, основанный в 1955 году академиком А.А.Дородницыным, является ведущим научно-исследовательским институтом Российской академии наук в области вычислительных методов, математического моделирования, математического и программного обеспечения ЭВМ</div>
                         </div>
                         <div class="partners__company company">
                             <div class="company__img">
-                                <img src="img/body/company/gokhran.jpeg" alt="gokhran">
+                                <img src="main_page/img/body/company/gokhran.jpeg" alt="gokhran">
                             </div>
                             <div class="company__text">Федеральное казенное учреждение "Государственное учреждение по формированию Государственного фонда драгоценных металлов и драгоценных камней Российской Федерации, хранению, отпуску и использованию драгоценных металлов и драгоценных камней</div>
                         </div>
                         <div class="partners__company company">
                             <div class="company__img">
-                                <img src="img/body/company/irkut.jpg" alt="irkut">
+                                <img src="main_page/img/body/company/irkut.jpg" alt="irkut">
                             </div>
                             <div class="company__text">Корпорация «Иркут» занимает лидирующие позиции среди российских авиастроительных предприятий. Деятельность корпорации направлена на проектирование, производство, реализацию и послепродажное обслуживание авиационной техники военного и гражданского назначения.</div>
                         </div>
                         <div class="partners__company company">
                             <div class="company__img">
-                                <img src="img/body/company/lanit.jpg" alt="lanit">
+                                <img src="main_page/img/body/company/lanit.jpg" alt="lanit">
                             </div>
                             <div class="company__text">ЛАНИТ (Лаборатория Новых Информационных Технологий) - крупнейший российский системным интегратор и партнер более двухсот основных мировых производителей оборудования и программных решений в области высоких технологий.</div>
                         </div>
@@ -286,7 +286,7 @@
                         <div class="footer__img-and-text img-and-text">
                             <div class="img-and-text__img">
                                 <a href="">
-                                    <img src="img/footer/img-and-text/home-icon.png" alt="home-icon">
+                                    <img src="main_page/img/footer/img-and-text/home-icon.png" alt="home-icon">
                                 </a>
                             </div>
                             <div class="img-and-text__text">Москва, 2-я Бауманская ул., д. 5</div>
@@ -294,7 +294,7 @@
                         <div class="footer__img-and-text img-and-text">
                             <div class="img-and-text__img">
                                 <a href="">
-                                    <img src="img/footer/img-and-text/phone-icon.png" alt="phone-icon">
+                                    <img src="main_page/img/footer/img-and-text/phone-icon.png" alt="phone-icon">
                                 </a>
                             </div>
                             <div class="img-and-text__text">+7 (499) 263 6840</div>
@@ -302,7 +302,7 @@
                         <div class="footer__img-and-text img-and-text">
                             <div class="img-and-text__img">
                                 <a href="">
-                                    <img src="img/footer/img-and-text/mail-icon.png" alt="mail-icon">
+                                    <img src="main_page/img/footer/img-and-text/mail-icon.png" alt="mail-icon">
                                 </a>
                             </div>
                             <div class="img-and-text__text">rk6@bmstu.ru</div>
@@ -310,7 +310,7 @@
                         <div class="footer__img-and-text img-and-text">
                             <div class="img-and-text__img">
                                 <a href="">
-                                    <img src="img/footer/img-and-text/vk-icon2.png" alt="vk-icon">
+                                    <img src="main_page/img/footer/img-and-text/vk-icon2.png" alt="vk-icon">
                                 </a>
                             </div>
                             <div class="img-and-text__text">Мы ВКонтакте</div>
@@ -325,7 +325,7 @@
         </section>
     </div>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="js/burger-menu.js"></script>
-    <script src="js/slider.js"></script>
+    <script src="main_page/js/burger-menu.js"></script>
+    <script src="main_page/js/slider.js"></script>
 </body>
 </html>
