fix (for-students.html) исправлена карточка

--- a/for_students/for-students.html
+++ b/for_students/for-students.html
@@ -87,7 +87,7 @@
                                 <img src="img/body/info-card/cloud.jpg" alt="cloud">
                             </div>
                             <div class="info-card__text info-card__colour3">
-                                <a href="">Проходные баллы</a>
+                                <a href="">Облачный сервис</a>
                             </div>
                         </div>
                     </div>
